--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "plyrue": "^2.1.6",
+    "v-mask": "^2.2.4",
     "vee-validate": "^3.2.5",
     "video.js": "^7.7.5",
     "vue": "^2.6.11",
